# FinOL

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  finolconfig.py  notebook5ec0af0e52.ipynb  pyproject.toml  requirements.txt  setup.py  temp.py  test.py
docs/: Makefile  conf.py  make.bat
docs/figure/source/: conf.py  index.rst
docs/locales/zh/LC_MESSAGES/: background.po  file_structure.po  installation.po  license.po
docs/locales/zh_CN/LC_MESSAGES/: api.mo  api.po  background.mo  background.po  contact_us.mo  contact_us.po  extend.mo  extending.po  file_structure.mo  file_structure.po  index.mo  index.po  installation.mo  installation.po  key_features.mo  key_features.po  license.mo  license.po  quickstart.mo  quickstart.po  supported_resources.mo  supported_resources.po
docs/locales/zh_TW/LC_MESSAGES/: api.mo  api.po  background.mo  background.po  contact_us.mo  contact_us.po  extending.mo  extending.po  file_structure.mo  file_structure.po  index.mo  index.po  installation.mo  installation.po  key_features.mo  key_features.po  license.mo  license.po  quickstart.mo  quickstart.po  supported_resources.mo  supported_resources.po
docs/source/: 404.rst  background.rst  conf.py  contact_us.rst  extend.rst  extending.rst  file_structure.rst  index.rst  installation.rst  license.rst  quickstart.rst  supported_baselines.rst  supported_datasets.rst  supported_features.rst  supported_metrics.rst  supported_visualization.rst
docs/source/_static/css/: authlib.css  custom.css  optuna.css
docs/source/_templates/autosummary/: class.rst
docs/source/api/: config.rst  data_layer.rst  evaluation_layer.rst  index.rst  model_layer.rst  model_layer.rst1  optimization_layer.rst  other_modules.rst  other_modules.rst1
docs/source/key_features/: baselines.rst  criterion.rst  elo.rst  images.rst  index.rst  input.rst  models.rst  optimizers.rst  results.rst  visualization.rst
docs/source/supported_resources/: index.rst  supported_baselines.rst  supported_datasets.rst  supported_elo.rst  supported_features.rst  supported_metrics.rst  supported_results.rst  supported_visualization.rst  supported_visualization_copy.rst
finol/: FinOLAPP.py  __init__.py  config.json  config.py  setup.py  test.py  tk.py  update.py  utils.py
finol/APP/: FinOLAPP.py  __init__.py  display_info.py
finol/benchmark_results/other/price_relative/: price_relative_CMEG.mat  price_relative_CRYPTO.mat  price_relative_DJIA.mat  price_relative_HSI.mat  price_relative_NYSE(N).mat  price_relative_NYSE(O).mat  price_relative_SP500.mat  price_relative_SSE.mat  price_relative_TSE.mat
finol/benchmark_results/practical_metrics/: ato.xlsx  tcw.xlsx
finol/benchmark_results/practical_metrics/1/: final_practical_result.xlsx  transaction_costs_adjusted_cumulative_wealth.xlsx
finol/benchmark_results/practical_metrics/2/: final_practical_result.xlsx  transaction_costs_adjusted_cumulative_wealth.xlsx
finol/benchmark_results/practical_metrics/3/: final_practical_result.xlsx  transaction_costs_adjusted_cumulative_wealth.xlsx
finol/benchmark_results/practical_metrics/4/: final_practical_result.xlsx  transaction_costs_adjusted_cumulative_wealth.xlsx
finol/benchmark_results/practical_metrics/5/: final_practical_result.xlsx  transaction_costs_adjusted_cumulative_wealth.xlsx
finol/benchmark_results/practical_metrics/6/: final_practical_result.xlsx  transaction_costs_adjusted_cumulative_wealth.xlsx
finol/benchmark_results/profit_metrics/: cw_apy_sr_PREVIOUS.xlsx  daily_cw_PREVIOUS.xlsx
finol/benchmark_results/profit_metrics/1/: daily_return.xlsx  (+2 more)
finol/benchmark_results/risk_metrics/: vr_mdd_PREVIOUS.xlsx
finol/data_layer/: DatasetLoader.py  ScalerSelector.py  __init__.py  all_tickers_list.txt  crypto_2024.txt  data_collector.py  data_loader.py  dataset_loader.py  date_index_merge.py  djia_2024.txt  nyse_2024.txt  scaler_selector.py  sp500_2024.txt  test.py  tse_2024.txt
finol/evaluation_layer/: BenchmarkLoader.py  EconomicDistiller.py  MetricCaculator.py  ModelEvaluator.py  __init__.py  benchmark_loader.py  distiller_selector.py  economic_distiller.py  economic_distiller_metric_caculator.py  metric_caculator.py  metric_calculator.py  model_evaluator.py  radar_chart.py  ranking_system.py  result_ranker.py  result_visualizer.py
finol/evaluation_layer/2024-03-13_21-53-19/: config.py
finol/evaluation_layer/2024-03-13_21-53-56/: best_model_CRYPTO.pt  config.py
finol/evaluation_layer/2024-03-13_21-55-00/: best_model_CRYPTO.pt  config.py  last_model_CRYPTO.pt
finol/evaluation_layer/2024-03-13_21-58-39/: best_model_CRYPTO.pt  config.py  last_model_CRYPTO.pt
finol/evaluation_layer/2024-03-14_14-10-06/: best_model_NYSE(O).pt  config.py  last_model_NYSE(O).pt
finol/evaluation_layer/2024-03-14_14-16-53/: config.py
finol/evaluation_layer/2024-03-14_14-27-54/: best_model_NYSE(O).pt  last_model_NYSE(O).pt
finol/evaluation_layer/2024-03-14_14-45-10/: config.py
finol/evaluation_layer/2024-03-14_15-06-10/: last_model_NYSE(O).pt
finol/main/: _.ipynb  auto_tuning.ipynb  main.ipynb  main.py  test_script.py
finol/model_layer/: AlphaPortfolio.py  AlphaStock.py  CNN.py  CNN_JF.py  CustomModel.py  DNN.py  GRU.py  LSRE_CAAN.py  LSTM.py  ModelSelector.py  RNN.py  TCN.py  Transformer.py  UserModel.py  __init__.py  model_instantiator.py  model_selector.py
finol/optimization_layer/: CriterionSelector.py  ModelTrainer.py  OptimizerSelector.py  OptunaOptimizer.py  __init__.py  criterion_selector.py  model_trainer.py  optimizer_selector.py  optuna_optimizer.py  parameters_tuner.py  price_relative_CRYPTO.mat  price_relative_NYSE(O).mat
finol/tutorials/: _.ipynb  main.ipynb  tutorial_1.ipynb  tutorial_2.ipynb  tutorial_3.ipynb  tutorial_4.ipynb  tutorial_quickstart.ipynb
finol/update/: __init__.py
logdir/2024-03-20_18-29-17/: config.py  last_model_TSE.pt
logdir/2024-03-20_18-42-35/: best_model_TSE.pt
tutorials/: TUT.ipynb  main.ipynb  test.ipynb  tutorial_1.ipynb  tutorial_2.ipynb  tutorial_3.ipynb  tutorial_4.ipynb  tutorial_5.ipynb
tutorials/.ipynb_checkpoints/: tutorial_1-checkpoint.ipynb
(+1136 files in other folders)
